# neobank-anchor-lab

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Anchor.toml  CHECKLIST.md  PROMPT-CODEX.md  README.md  package-lock.json  package.json  tsconfig.json
programs/neobank_anchor_demo/: Cargo.toml
programs/neobank_anchor_demo/src/: lib.rs
tests/: neobank_anchor_demo.ts
