[package]
name = "neobank_anchor_demo"
version = "0.1.0"
description = "Simple educational neobank demo built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neobank_anchor_demo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
